--- a/src/containers/App/App.module.scss
+++ b/src/containers/App/App.module.scss
@@ -9,7 +9,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: logospin infinite 20s linear;
   }
 }
 
