--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 .Footer {
     margin-top: auto;
-    padding: .5rem 1rem;
+    padding: 0 1rem;
     height: 100%;
     min-height: 2.5rem;
     display: flex;
