--- a/src/elements/Card/Card.module.scss
+++ b/src/elements/Card/Card.module.scss
@@ -6,6 +6,7 @@
     width: 100%;
     max-width: 280px;
     height: 100%;
+    min-height: 10rem; // should fit our loaders in pretty nicely
     margin: 2rem auto;
     border-radius: 20px;
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.16);
