--- a/src/components/BreweryList/BreweryList.module.scss
+++ b/src/components/BreweryList/BreweryList.module.scss
@@ -1,3 +1,13 @@
 .BreweryListWrapper {
     width: 100%;
 }
+
+.Table {
+    padding: 2rem;
+    width: 100%;
+}
+
+.Table caption {
+    font-size: 1.875rem;
+    line-height: 4rem;
+}
