--- a/src/elements/Card/Card.module.scss
+++ b/src/elements/Card/Card.module.scss
@@ -10,7 +10,12 @@
     margin: 2rem auto;
     border-radius: 20px;
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.16);
+
+    &:first-of-type {
+        margin-top: 0;
+    }
 }
+
 @media only screen and (min-width:600px) {
     .Card {
         max-width: 472px;
