--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,6 @@
 .Header {
     margin: 0;
+    margin-bottom: 1rem;
     padding: .5rem 1.5rem;
     height: 100%;
     min-height: 2.5rem;
@@ -11,6 +12,7 @@
     -ms-transition: background-color .5s ease-out;
     transition: background-color .5s ease-out;
 }
+
 @media only screen and (min-width:600px) {
     .Header {
         justify-content: center;
